2005-06-27  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Add corrected spelling of LOG_USER.

2005-06-13  Miguel de Icaza  <miguel@novell.com>

	*  sys-statvfs.c (copy_statfs): f_flags is the field name on BSD,
	not f_flag. 

2005-06-08  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Create an unversioned library.  We won't make any gaurantees
	  about ABI stability until Mono 1.2 (if then).

2005-06-07  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-mman.c: Check for presence of mremap and remap_file_pages.

2005-06-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map-icalls.h, map.h: Change header comment so it matches what 
	  `make refresh` generates.
	* map.c: Add <sys/xattr.h> header.

2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-mman.c: Add wrappers for mmap, munmap, mprotect, msync, mlock,
	  munlock, mremap, mincore, remap_file_pages.
	* map-icalls.h: Update to latest shared interface.
	* map.c, map.h: Add {To,From} pairs for MmapFlags, MmapProt, MsyncFlags,
	  MlockallFlags, MremapFlags.
	* mph.h: Add mph_return_*_if_ssize_t_overflow macros.

2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>

	* unistd.c: Oops -- deal with s/LockFlags/LockfCommand/ change.

2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>

	* map.h, map.c, map-icalls.h: Rename LockFlags to LockfCommand.

2005-05-20  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (MPH_C_SOURCE): Add map-icalls.h. Fixes #75012.

2005-05-18  Jonathan Pryor  <jonpryor@vt.edu>

	* map-icalls.h: Added; auto-generated file which contains Mono_Posix_*
	  declarations for DllImport functions in Mono.Posix.dll.  This ensure
	  consistency between Mono.Posix.dll and MonoPosixHelper.so.
	* mph.h: Add include for map-icalls.h, to ensure that all MonoPosixHelper
	  exports have correct prototypes.
	* dirent.c, grp.c, macros.c, pwd.c, signal.c, stdio.c, sys-stat.c, 
	  sys-time.c, utime.c: Correct prototypes to match map-icalls.h.  Alas, this